--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -1,10 +1,7 @@
 .nav-tabs {
   float: right;
   margin-right: 10%;
-  
 }
-
-
 
 .header {
   border-bottom: 3px solid #2220b4;
@@ -12,9 +9,9 @@
 
 body {
   background-color: #999771;
- } 
+}
 
- .card {
+.card {
   background: rgb(231, 110, 110);
   border-radius: 2px;
   height: 325px;
@@ -29,12 +26,11 @@ body {
   height: 100%;
   overflow: hidden;
   text-align: center;
-  background:#6CADDC;
+  background: #6caddc;
   padding-top: 10px;
-  
 }
 .card > .img-container > img {
-  width: 90%
+  width: 90%;
 }
 
 .card > .content {
@@ -42,7 +38,6 @@ body {
   padding-right: 1rem;
   font-size: 15px;
   height: 200px;
-  
 }
 
 .card > .content > ul {
@@ -54,7 +49,7 @@ body {
 }
 
 .port-card {
-height: 400px;;
+  height: 400px;
 }
 
 .portfolio-container {
@@ -62,26 +57,24 @@ height: 400px;;
   margin-bottom: 100px;
 }
 
-
 .container {
   margin-left: 25%;
   border: 1px white solid;
-  background-color:  #fffdd0;
+  background-color: #fffdd0;
   width: 50%;
 }
 
 body {
-  background-image: url("./assets/background.png"); 
+  background-image: url("./assets/codeprogramming.jpg");
   background-color: #cccccc;
-  min-height: 1300px; 
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover; 
+  min-height: 1300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .nav-tabs {
   border: 2px lightgray solid;
-
 }
 
 .nav-link {
@@ -90,15 +83,13 @@ body {
 }
 
 .about-container {
-   border: 1px white solid;
-  background-color:  #afab61; 
+  border: 1px white solid;
+  background-color: #afab61;
   text-justify: inter-cluster;
-  margin-top: 5%; 
+  margin-top: 5%;
   padding: 10px;
-  margin-left:5%;
-  margin-right:5%;
-  
-   
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .profile {
@@ -112,9 +103,6 @@ body {
   height: auto;
   margin-left: 75px;
   margin-top: 15px;
-
-  
-  
 }
 
 .footer {
@@ -122,38 +110,35 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color:  teal;
+  background-color: teal;
   color: rgb(14, 13, 13);
   text-align: center;
   border-top: 3px solid #2220b4;
 }
 
 .contact-card {
-border: 1px rgb(48, 28, 28) solid;
-background-color:  #fffdd0;
-width: 25%;
-margin-left: 35%;
-margin-top: 20px;
+  border: 1px rgb(48, 28, 28) solid;
+  background-color: #fffdd0;
+  width: 25%;
+  margin-left: 35%;
+  margin-top: 20px;
 }
 
 .contactLinks {
- margin-left: 35%;
- 
+  margin-left: 35%;
 }
 
 .card-home {
- height: 400px;
- 
+  height: 400px;
 }
 
 .row-home {
- margin-top: 10%;
- margin-left: 33%;
+  margin-top: 10%;
+  margin-left: 33%;
 }
 
 .ome-profile-photo {
- margin: bottom 10%;
- width: 50%;
- height: 50%;
- 
+  margin: bottom 10%;
+  width: 50%;
+  height: 50%;
 }
