--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -1,40 +1,52 @@
-.nav-tabs {
+/* .nav-tabs {
   float: right;
   margin-right: 10%;
+} */
+.container-fluid {
+  background-color: #345b63;
 }
-
-.header {
+/* .header {
   border-bottom: 3px solid #2220b4;
-}
-
-body {
-  background-color: #999771;
-}
+} */
 
 .card {
-  background: rgb(231, 110, 110);
+  background: #b2b1b9;
   border-radius: 2px;
-  height: 325px;
+  height: 425px;
   margin: 1rem;
-  position: relative;
-  width: 325px;
+
+  width: auto;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+}
+.card-body {
+  text-align: center;
 }
 
 .card > .img-container {
   height: 100%;
   overflow: hidden;
   text-align: center;
-  background: #6caddc;
+  background: #035397;
   padding-top: 10px;
 }
 .card > .img-container > img {
   width: 90%;
 }
-
 .port-card {
   margin-left: 20%;
+}
+
+.contact-profile {
+  margin-bottom: 0%;
+  width: 90%;
+}
+
+.contact-btn {
+  margin-left: 25%;
+}
+.btn-contact {
+  margin-left: 5%;
 }
 
 .card > .content > ul > li {
@@ -42,34 +54,45 @@ body {
   margin-left: 10%;
 }
 
+.card:hover {
+  margin-left: 20%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
 .port-card {
+  margin-left: 25%;
+
   height: 400px;
 }
 
 .portfolio-container {
+  margin-left: 15%;
+  margin-right: 25%;
   margin-top: 60px;
   margin-bottom: 100px;
 }
 
 .container {
   margin-left: 25%;
-  border: 1px white solid;
-  background-color: #fffdd0;
+  /* border: 1px rgb(148, 11, 11) solid; */
+
   width: 50%;
 }
 
 body {
-  background-image: url("./assets/codeprogramming.jpg");
-  background-color: #cccccc;
+  background-image: url("./assets/background-.png");
+  /* background-color: #77acf1; */
   min-height: 1300px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-.nav-tabs {
-  border: 2px lightgray solid;
-}
+/* .hone {
+  color: white;
+  background-color: #140a42;
+} */
 
 .nav-link {
   color: white;
@@ -77,19 +100,22 @@ body {
 }
 
 .about-container {
-  border: 1px rgb(218, 24, 24) solid;
-  background-color: #afab61;
   text-justify: inter-cluster;
   margin-top: 5%;
-  padding: 10px;
+  padding-top: 0px;
   margin-left: 5%;
   margin-right: 5%;
 }
-
+#linke {
+  width: 15%;
+}
 .profile {
-  width: 300px;
-  height: auto;
-  padding: 15px;
+  border-radius: 50%;
+  border: 7px solid #fff;
+  width: 120px;
+  height: 120px;
+
+  float: left;
 }
 
 .resumePNG {
@@ -108,14 +134,32 @@ body {
   color: rgb(14, 13, 13);
   text-align: center;
   border-top: 3px solid #2220b4;
+  margin-right: 20%;
+}
+
+#action-btn {
+  margin-top: 20%;
+}
+
+.highlight {
+  font-style: normal;
+  /* color: #43c3fa; */
+  color: #2c394b;
 }
 
 .contact-card {
-  border: 1px rgb(48, 28, 28) solid;
-  background-color: #fffdd0;
-  width: 25%;
+  height: 50vh;
+  width: 50%;
   margin-left: 35%;
   margin-top: 20px;
+}
+
+.card-content {
+  height: 100vh;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .contactLinks {
@@ -123,12 +167,21 @@ body {
 }
 .title {
   text-align: center;
+  color: rgb(62, 38, 21);
 }
 
 .card-home {
   height: 400px;
 }
 
+h1 {
+  text-align: center;
+  font-size: 2.4rem;
+  margin-bottom: 5%;
+}
+.home-btn {
+  margin-top: 50%;
+}
 .row-home {
   margin-top: 10%;
   margin-left: 33%;
@@ -143,6 +196,24 @@ body {
 .text-center {
   text-decoration: black;
 }
-.profile {
-  float: left;
+
+.socials {
+  position: absolute;
+  top: 10vh;
+  left: 12px;
+}
+.socials a img {
+  display: block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  top: 0px;
+
+  margin-top: 20px;
+  margin-bottom: 12px;
+
+  filter: invert(15%) sepia(82%) saturate(4795%) hue-rotate(335deg)
+    brightness(86%) contrast(118%);
+  transition: 0.2s ease-in;
+  -webkit-transition: 0.2s ease-in;
 }
